<resources>
    <string name="app_name">Instagram_Clone</string>
    <string name="str_signin_fb">Sign In With Facebook</string>
    <string name="str_signIn">Sign In</string>
    <string name="action_signin_fb">Sign In With Facebook</string>
    <string name="action_create_user">Create Account</string>
    <string name="action_signIn">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_main_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="facebook_app_id">373343117296869</string>
    <string name="fb_login_protocol_scheme">fb373343117296869</string>
</resources>